# candle_exercise

./: Cargo.toml  README.md
src/: app_state.rs  camera_nokhwa.rs  camera_opencv.rs  lib.rs  main.rs  process_frame.rs  send_frame.rs
src/pose/: mod.rs  model.rs  utils.rs  yolov8.rs
