[package]
name = "exercise_screen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18", features = ["headers", "ws"] }
axum-extra = "0.8.0"
futures = "0.3"
opencv = "0.85.3"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.20"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.4", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

candle-core = "0.3.0"
candle-nn = "0.3.0"
candle-transformers = "0.3.0"
image = { version="0.24.7", default-features = false, features = ["jpeg", "png"] }
clap = { version = "4.2.4", features = ["derive"] }
anyhow = { version = "1", features = ["backtrace"] }
rusttype = { version = "0.9", default-features = false }
tokenizers = { version = "0.14.1", default-features = false, features = ["onig"] }
hf-hub = "0.3.0"
imageproc = { version = "0.23.0", default-features = false }
tracing-chrome = "0.7.1"
lazy_static = "1.4.0"
